5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1723_2498.log
== TEST (2019-05-09 11:29:28) 
-- CODE:
na = int(input("num. Hab: "))
nb = int(input("num. Han: "))
pa = float(input("perc. cresA: "))
pb = float(input("perc. cresb: "))

percA = pA / 100
percB = pB / 100

ano = 0
while(na < nb):
	na = na + (na * percA)
	nb = nb + (nb * percB)
	ano = ano + 1
print(ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    percA = pA / 100
NameError: name 'pA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:30:10) 
-- CODE:
na = int(input("num. Hab: "))
nb = int(input("num. Han: "))
pa = float(input("perc. cresA: "))
pb = float(input("perc. cresb: "))

percA = pa / 100
percB = pb / 100

ano = 0
while(na < nb):
	na = na + (na * percA)
	nb = nb + (nb * percB)
	ano = ano + 1
print(ano)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:31:01) 
-- CODE:
na = int(input("num. Hab: "))
nb = int(input("num. Han: "))
pa = float(input("perc. cresA: "))
pb = float(input("perc. cresb: "))

percA = pa / 100
percB = pb / 100

ano = 0
while(na < nb):
	na = na + (na * percA)
	nb = nb + (nb * percB)
	ano = ano + 1
print(ano)
-- EXECUTION TIME:
0.141682
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
